# dioniceOS

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  README.md  README_DE.md  README_OLD.md  STEPS_5_6_COMPLETE.md  STEP_7_COMPLETE.md  TRICHTER_COMPLETE.md  apollyon_mef.md
Geometric-Cognitive Computing Platform/apollyon_5d/bridge/examples/: adaptive_epidemic.rs  self_tuning_ecology.rs
Geometric-Cognitive Computing Platform/apollyon_5d/bridge/src/: adaptive_coupling.rs  mandorla_field.rs  trajectory_observer.rs  unified_system.rs
Geometric-Cognitive Computing Platform/apollyon_5d/core/src/: export.rs  lib.rs  main.rs  template.rs  validation.rs
Geometric-Cognitive Computing Platform/apollyon_5d/docs/: 5D_ALIGNMENT_SUMMARY.md  FINAL_SUMMARY.md
Geometric-Cognitive Computing Platform/apollyon_5d/metatron/src/: engine.rs
Geometric-Cognitive Computing Platform/apollyon_5d/metatron/src/cognition/: master.rs
Geometric-Cognitive Computing Platform/apollyon_5d/metatron/src/geometry/: cube.rs
apollyon-mef-bridge/: Cargo.toml  NEXT_STEPS_COMPLETE.md  PERFORMANCE.md  TUTORIALS.md
apollyon-mef-bridge/src/: lib.rs
apollyon-mef-bridge/src/adapters/: metatron_adapter.rs  mod.rs  resonance_adapter.rs  spectral_adapter.rs  state_adapter.rs
apollyon-mef-bridge/src/trichter/: mod.rs
apollyon-mef-bridge/src/unified/: async_engine.rs  cognitive_engine.rs  mod.rs  types.rs
apollyon_5d/bridge/examples/: geometric_finance.rs
apollyon_5d/bridge/src/: geometric_forcing.rs  parameter_tuner.rs  resonance_field.rs  spectral_analyzer.rs
apollyon_5d/core/examples/: custom_system.rs
apollyon_5d/core/src/: dynamics.rs  ensemble.rs
apollyon_5d/metatron/src/: lib.rs
apollyon_5d/metatron/src/cognition/: agent.rs  mod.rs  qdash.rs
apollyon_5d/metatron/src/geometry/: graph.rs  mod.rs
apollyon_5d/metatron/src/spectral/: entropy.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md
infinity-ledger/: EXTENSION_README.md
overlay/unified_5d_cube/: Cargo.toml  FUTURE_EXTENSIONS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  interlock_map.md
overlay/unified_5d_cube/src/: interlock.rs  lib.rs  tick.rs
